fixed bug where the menu was not showing everything

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body{
 
 .menu {
     width: 420px;
-    height: 100%;
+    height: 90%;
     overflow: scroll;
     background-color: white;
     transform-origin: all 0.3s ease;
